--- a/public/templates/hr.html
+++ b/public/templates/hr.html
@@ -9,7 +9,7 @@
 	        <div class="title-date center"> 22 September, 2015</div>
       	</ion-item-->
 	<ion-list class="questionnaire" ng-controller="AppCtrl" show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
-	      	<ion-item class="item item-divider border-right ques-lnk question-padding" ng-repeat="hr in hrdata">
+	      	<ion-item ng-if="hrdata" class="item item-divider border-right ques-lnk question-padding" ng-repeat="hr in hrdata">
 		        <div class="ques-title">HR value : {{hr.avg_heart_rate}}</div>
                         <div class="time">Time range : {{hr.start_time}} - {{hr.end_time}}</div>
 		        <!--<div class="datetime">
@@ -23,6 +23,7 @@
 		        	</span>
 		        </div>-->
 	      	</ion-item>
+		<div ng-if="norecords" class="center">{{norecords}}</div>
 	</ion-list>
     </ion-content>
 </ion-view>
